NEXT
	Added JSON output support using libjansson (-j),
	supported by -t, -p and -s.

	Abandoned YAML, perl and C key export support,
	better doing one external format but doing it
	good. Also, I had no importers for those formats
	but I'll add a JSON importer.

	Removed -y for YAML vault export as well. Maybe
	I'll add a parameter to -p or -s so one can
	select which key[s] to export.

	removed hand-written padding stuff and using
	libsodiums _easy() functions for crypto now
	instead of the raw nacl ones. instead we use
	the _easy variants of the crypto_*box functions,
	which libsodium provides. I didn't use them so
	far because I wasn't aware of their existence.

	using secure memory where applicable.

	changed encryption protocol, now we're using
	counter mode for stream encryption. we use the
	nonce, which is required by crypto_secretbox
	anyway, as a counter. our counter has a variable
	size and starts with one byte. the first byte
	of the nonce signifies the counter size and the
	following byte(s) are used as the counter. if it
	is larger than one byte, it will be converted to
	big endian. maximum possible counter size is 184
	bit, current maximum implemented counter size is
	64 bit.

	removed CBC mode support, it wasn't enabled by
	default anyway.

	using libsodium memory protection facilities where
	applicable (keys, passwords, hashes).

	fixed compilation failure when using clang.

	fixed self-mode crypto. now -m enables symmetric
	encryption, while -M adds the senders primary pub
	key to the list of recipients in asymmetric mode.

	added automated tests using travis-ci:
	https://travis-ci.org/TLINDEN/pcp/

	fixed several use-after-free bugs in encryption
	code.

	made configure more portable, esp. fixed finding
	of libsodium.

	replaced star's incorporated scrypt() with the
	one libsodium now provides. breaks compatibility
	to older pcp versions, but is more portable and
	removes to burden to keep this code up to date.
