@@ -1,5 +1,5 @@
 JSON:
-- import pub und secret as json
+- import secret as json
 
 detach keysig generation from pub key export, so that an existing
 keysig can be verified later.
